syntax = "proto3";

package flowcraft.v1;

import "base.proto";
import "widget.proto";
import "action.proto";

// ============================================================================
// Unified WebSocket Protocol
// ============================================================================

message FlowMessage {
  string message_id = 1;
  int64 timestamp = 2;

  oneof payload {
    // --- Synchronization ---
    SyncRequest sync_request = 10;
    bytes yjs_update = 11; // CRDT incremental update

    // --- Other Client Actions ---
    UpdateNodeRequest node_update = 12;
    UpdateWidgetRequest widget_update = 13;
    ActionExecutionRequest action_execute = 14;
    TaskCancelRequest task_cancel = 15;
    ViewportUpdate viewport_update = 16;

    // --- Server -> Client ---
    GraphSnapshot snapshot = 20;
    MutationList mutations = 21;
    TaskUpdate task_update = 22;
    StreamChunk stream_chunk = 23;
    ErrorResponse error = 24;
  }
}

// --- Specific Message Structures ---

message SyncRequest { string graph_id = 1; }

message UpdateNodeRequest {
  string node_id = 1;
  NodeData data = 2;
  Position position = 3;
}

message UpdateWidgetRequest {
  string node_id = 1;
  string widget_id = 2;
  string value_json = 3;
}

message ViewportUpdate {
  Viewport viewport = 1;
  Rect visible_bounds = 2;
}

message MutationList {
  repeated GraphMutation mutations = 1;
  int64 sequence_number = 2;
}

message StreamChunk {
  string node_id = 1;
  string widget_id = 2;
  string chunk_data = 3;
  bool is_done = 4;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
}

// ============================================================================
// Service Interface
// ============================================================================

service FlowService {
  // The single bidirectional stream for all graph interactions
  rpc Connect (stream FlowMessage) returns (stream FlowMessage);
}

// ... (Existing GraphMutation, TaskUpdate, etc.)
message GraphSnapshot {
  repeated Node nodes = 1;
  repeated Edge edges = 2;
  int64 version = 3;
}

message GraphMutation {
  oneof operation {
    AddNode add_node = 1;
    UpdateNode update_node = 2;
    RemoveNode remove_node = 3;
    AddEdge add_edge = 4;
    RemoveEdge remove_edge = 5;
    AddSubGraph add_subgraph = 6;
    ClearGraph clear_graph = 7;
  }
}

message AddNode { Node node = 1; }
message UpdateNode { string id = 1; NodeData data = 2; Position position = 3; }
message RemoveNode { string id = 1; }
message AddEdge { Edge edge = 1; }
message RemoveEdge { string id = 1; }
message AddSubGraph { repeated Node nodes = 1; repeated Edge edges = 2; }
message ClearGraph {}

message TaskUpdate {
  string task_id = 1;
  TaskStatus status = 2;
  double progress = 3;
  string message = 4;
  string result_json = 5;
}

enum TaskStatus {
  TASK_PENDING = 0;
  TASK_PROCESSING = 1;
  TASK_COMPLETED = 2;
  TASK_FAILED = 3;
  TASK_CANCELLED = 4;
}

message TaskCancelRequest { string task_id = 1; }